--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build --watch",
+    "serve": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,8 +22,18 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@webcomponents/custom-elements": "^1.0.4",
+    "clarity-angular": "^0.10.12",
+    "clarity-icons": "^0.10.12",
+    "clarity-ui": "^0.10.12",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.19.1",
+    "mutationobserver-shim": "^0.3.2",
+    "ng2-toasty": "^4.0.3",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.5.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
