--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "foodcourt",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "prioperetary",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng build --watch",
@@ -11,7 +12,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
