--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/lunr": "^2.1.3",
     "@webcomponents/custom-elements": "^1.0.4",
     "clarity-angular": "^0.10.12",
     "clarity-icons": "^0.10.12",
     "clarity-ui": "^0.10.12",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
+    "lunr": "^2.1.4",
     "moment": "^2.19.1",
     "mutationobserver-shim": "^0.3.2",
     "ng2-toasty": "^4.0.3",
