--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "mutationobserver-shim": "^0.3.2",
+    "ng2-dnd": "^5.0.1",
     "ng2-toasty": "^4.0.3",
     "ng2-validation": "^4.2.0",
     "rxjs": "^5.5.2",
