Modify and mount datepicker

--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "clarity-icons": "^0.10.12",
     "clarity-ui": "^0.10.12",
     "core-js": "^2.4.1",
+    "date-fns": "^1.29.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "mutationobserver-shim": "^0.3.2",
     "ng2-dnd": "^5.0.1",
     "ng2-toasty": "^4.0.3",
     "ng2-validation": "^4.2.0",
+    "ngx-slimscroll": "^3.4.1",
     "rxjs": "^5.5.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
