--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng build --watch --delete-output-path=false",
     "serve": "ng serve",
-    "build": "ng build --delete-output-path=false --aot",
+    "build": "ng build --delete-output-path=false --aot --prod --env=prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
