--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "serve": "ng serve",
-    "build": "ng build --aot --prod --env=prod",
+    "build": "ng build --delete-output-path=false --aot --prod --env=prod",
     "proxy": "node ./utils/proxy.js",
     "test": "ng test",
     "lint": "ng lint",
