--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:aot": "ng serve --aot",
     "serve": "ng serve",
     "build": "ng build --delete-output-path=false --aot --prod --env=prod",
     "proxy": "node ./utils/proxy.js",
