chore: add @angular-devkit/core@0.0.29

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular-devkit/core": "0.0.29",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
